Add auth templates

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 
 <!-- Footer -->
 <footer class=" bg-black text-sky-700 text-center py-4 mt-auto">
-    <p class="text-sm text-white">Don't have an account? <a href="#" class="text-sky-700 hover:text-blue-500">Sign up!</a></p>
+    <p class="text-sm text-white">Don't have an account? <a href="/forgot-password" class="text-sky-700 hover:text-blue-500">Sign up!</a></p>
 </footer>
 </body>
 </html>
