--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <head>
     <title>Login Page</title>
     <link th:href="@{/main.css}" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="bg-black bg-cover bg-left-center flex flex-col justify-between min-h-screen">
